new psk-code theme and language attribute fixes on html pages

--- a/pages/About/how-to-write-documentation-pages.html
+++ b/pages/About/how-to-write-documentation-pages.html
@@ -15,7 +15,7 @@
 
   <psk-chapter title="Available tags">
     <psk-chapter title="Icons">
-      <psk-code> https://fontawesome.com/icons?d=gallery&m=free </psk-code>
+      <a href="https://fontawesome.com/icons?d=gallery&m=free">Check this page to get more beautiful icons</a>
     </psk-chapter>
 
     <psk-chapter title="psk-page">
