--- a/pages/Cardinal/models.html
+++ b/pages/Cardinal/models.html
@@ -1,8 +1,7 @@
 <psk-page title="Observable Models">
   <psk-toc title="In this section"></psk-toc>
   <psk-chapter title="makeObservable">
-    <psk-code>
-
+    <psk-code language="Javascript">
       makeObservable(oldModel) returns an observable model
 
       function bind(base, el, varname) {
