--- a/pages/Development/syndicate.html
+++ b/pages/Development/syndicate.html
@@ -11,7 +11,7 @@
             Here is an example of the quickest way to start and use a worker pool.
         </p>
 
-        <psk-code language="js">
+        <psk-code language="Javascript">
     const syndicate = require('syndicate');
 
     const {isMainThread} = require('worker_threads');
@@ -127,7 +127,7 @@
         <psk-chapter title="Basic Isolate implementation">
 
 
-            <psk-code language="js">
+            <psk-code language="Javascript">
     const syndicate = require('syndicate');
     const ivm = require('isolated-vm');
     const {EventEmitter} = require('events');
@@ -183,7 +183,7 @@
 
         <psk-chapter title="Isolates implementation that allows for asynchronous work">
 
-            <psk-code language="js">
+            <psk-code language="Javascript">
     const syndicate = require('syndicate');
     const ivm = require('isolated-vm');
     const {EventEmitter} = require('events');
