--- a/pages/forms/psk-for-each.html
+++ b/pages/forms/psk-for-each.html
@@ -22,7 +22,7 @@
 
     <psk-example title="Examples">
         <psk-chapter title="Model example">
-            <psk-code language="js">
+            <psk-code language="Javascript">
                 {
                     entities: [{
                         sectionTitle: {
@@ -66,7 +66,7 @@
         </psk-chapter>
 
         <psk-chapter title="Template example">
-            <psk-code>
+            <psk-code language="markup">
                 <psk-for-each data-view-model="entities">
                     <template>
                         <psk-form-row>
