--- a/pages/forms/psk-form-row.html
+++ b/pages/forms/psk-form-row.html
@@ -15,7 +15,7 @@
     </psk-chapter>
 
     <psk-example title="Code Examples">
-        <psk-code>
+        <psk-code language="markup">
             <psk-form-row>
                 <psk-label>Name, E-mail & Password</psk-label>
             </psk-form-row>
