--- a/pages/forms/psk-form.html
+++ b/pages/forms/psk-form.html
@@ -18,7 +18,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-form action="#" method="get" controller-name="TestFormController" form-actions="submit, reset-form">
                 <psk-form-row>
                     <psk-label label="Personal information"></psk-label>
