--- a/pages/forms/psk-label.html
+++ b/pages/forms/psk-label.html
@@ -20,7 +20,7 @@
     </psk-chapter>
 
     <psk-example title="Live Examples">
-        <psk-code>
+        <psk-code language="markup">
             <psk-form form-actions=''>
                 <psk-form-row>
                     <!-- Label set as attribute -->
