--- a/pages/forms/psk-radio-group.html
+++ b/pages/forms/psk-radio-group.html
@@ -16,7 +16,7 @@
     <psk-example title="Code Examples">
         <psk-chapter title="Source Code">
 <psk-chapter title="JavaScript Model">
-<psk-code language="js">
+<psk-code language="Javascript">
     gender: {
         label: "Select your gender",
         required: true,
@@ -29,16 +29,18 @@
             }
         ]
     }
+
 </psk-code>
 </psk-chapter>
 
 <psk-chapter title="Component usage with model">
-<psk-code>
+<psk-code language="markup">
     <psk-form controller-name="TestFormController" actions=" ">
         <psk-form-row>
             <psk-radio-group view-model="gender"> </psk-radio-group>
         </psk-form-row>
     </psk-form>
+    
 </psk-code>
 </psk-chapter>
 
