--- a/pages/forms/psk-radio.html
+++ b/pages/forms/psk-radio.html
@@ -26,7 +26,7 @@
     <psk-example title="Code Examples">
         <psk-chapter title="Source Code">
             <psk-chapter title="JavaScript Model">
-                <psk-code language="js">
+                <psk-code language="Javascript">
     gender: {
         label: "Select your gender",
         required: true,
@@ -43,7 +43,7 @@
             </psk-chapter>
 
             <psk-chapter title="Component usage with model">
-                <psk-code>
+                <psk-code language="markup">
                     <psk-form-row>
                         <psk-radio-group view-model="gender"> </psk-radio-group>
                     </psk-form-row>
