--- a/pages/forms/psk-select.html
+++ b/pages/forms/psk-select.html
@@ -20,7 +20,7 @@
 
     <psk-example title="Examples">
         <psk-chapter title="Code examples">
-            <psk-code>
+            <psk-code language="markup">
                 <psk-form controller-name="TestFormController">
                     <psk-form-row>
                         <psk-label>Psk-Select examples</psk-label>
