--- a/pages/psk-wiki/psk-chapter.html
+++ b/pages/psk-wiki/psk-chapter.html
@@ -29,7 +29,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-chapter title="JavaScript history">
                 <p>JavaScript was created by Brendan Eich in 1995 during his time at Netscape Communications. It was
                     inspired by Java, Scheme and Self.</p>
