--- a/pages/psk-wiki/psk-description.html
+++ b/pages/psk-wiki/psk-description.html
@@ -22,8 +22,8 @@
         <p><code>psk-chapter</code>(if the title is given) or <code>psk-card</code>(if it is not given)</p>
     </psk-chapter>
 
-    <psk-chapter title="Code Example">
-        <psk-code>
+    <psk-chapter  title="Code Example">
+        <psk-code language="markup">
             <psk-description title="PSK-description Example">
                 <p>Minus 40 degrees Celsius is exactly the same as minus 40 degrees Fahrenheit.</p>
                 <p>A lion's roar can be heard from eight kilometres away.</p>
