--- a/pages/psk-wiki/psk-example.html
+++ b/pages/psk-wiki/psk-example.html
@@ -19,7 +19,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-example title="Title Example">
                 <psk-list list-type="bullet">
                     <p>First entry</p>
