--- a/pages/psk-wiki/psk-img.html
+++ b/pages/psk-wiki/psk-img.html
@@ -19,7 +19,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup"> 
             <psk-img title="PSK-img Example" src="/assets/images/newlook/EDFS.png">
             </psk-img>
         </psk-code>
