--- a/pages/psk-wiki/psk-link.html
+++ b/pages/psk-wiki/psk-link.html
@@ -25,7 +25,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-link page="psk-wiki/psk-card">
                 Click me to get redirected!
             </psk-link>
