--- a/pages/psk-wiki/psk-list.html
+++ b/pages/psk-wiki/psk-list.html
@@ -24,7 +24,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-list list-type="unordered">
                 First entry
                 Second entry
