--- a/pages/psk-wiki/psk-page.html
+++ b/pages/psk-wiki/psk-page.html
@@ -27,7 +27,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-page title="PSK-page Example"></psk-page>
         </psk-code>
 
