--- a/pages/psk-wiki/psk-table.html
+++ b/pages/psk-wiki/psk-table.html
@@ -21,7 +21,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-table header="true" footer="true">
                 Title | Author | Published Year | Number of pages
                 The Water Dancer | Ta-Nehisi Coates | 2019 | 416
@@ -39,7 +39,7 @@
             </psk-table>
         </psk-example>
 
-        <psk-code>
+        <psk-code language="markup"> 
             <psk-table header="true" footer="true">
                 Title | | | Number of pages
                 The Water Dancer | Ta-Nehisi Coates | | 416
@@ -56,7 +56,7 @@
                 Title | Author | | Number of pages
             </psk-table>
         </psk-example>
-        <psk-code>
+        <psk-code language="markup">
             <psk-table header="true" footer="true">
                 Author | Song | Published Year 
                  | I want to break free | 1984
