--- a/pages/psk-wiki/psk-toc.html
+++ b/pages/psk-wiki/psk-toc.html
@@ -23,7 +23,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-toc title="PSK-toc Example">
             </psk-toc>
         </psk-code>
