--- a/pages/web-components/app-router.html
+++ b/pages/web-components/app-router.html
@@ -22,7 +22,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Examples">
-        <psk-code>
+        <psk-code language="markup">
             <psk-app-router historyType="browser" menuItems="[{
                 name: Home , path : /home , icon : fa-home , type : route , component : app-home
                 , exact : true },{ name : PSK Components , path : /psk-components , icon : fa-bars , type
