--- a/pages/web-components/attachments-list.html
+++ b/pages/web-components/attachments-list.html
@@ -18,7 +18,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Examples">
-        <psk-code>
+        <psk-code language="markup">
             <psk-attachments-list files="{name: file.txt , size: 5000, type: plain/text">
             </psk-attachments-list>
         </psk-code>
