--- a/pages/web-components/container.html
+++ b/pages/web-components/container.html
@@ -8,7 +8,7 @@
             <code>ControllerFactory</code> service) or the default <code>Controller</code>.</p>
         <p>It can also render javascript code inside the component if it is written between the <code>script</code>
             tags:
-            <psk-code>
+            <psk-code language="markup"> 
                 <script></script>
             </psk-code>
         </p>
@@ -32,7 +32,7 @@
     </psk-chapter>
 
     <psk-chapter title="HtmlFilePath Property Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-container html-file-path="pages/404.html">
             </psk-container>
         </psk-code>
@@ -44,7 +44,7 @@
     </psk-example>
 
     <psk-chapter title="Script Tag Usage Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-container>
                 <script>
                     let menuItems = [{
