--- a/pages/web-components/files-chooser.html
+++ b/pages/web-components/files-chooser.html
@@ -17,7 +17,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Examples">
-        <psk-code>
+        <psk-code language="markup">
             <psk-files-chooser label="Select files" accept="png">
             </psk-files-chooser>
         </psk-code>
