--- a/pages/web-components/floating-menu.html
+++ b/pages/web-components/floating-menu.html
@@ -20,7 +20,7 @@
     </psk-chapter>
 
     <psk-chapter title="Floating Menu code example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-container>
                 Too see the exemple again you just need to refresh!
                 <script>
