--- a/pages/web-components/grid.html
+++ b/pages/web-components/grid.html
@@ -26,7 +26,7 @@
 
     <psk-chapter title="Code Example">
         <psk-chapter title="Six-Column Source code">
-            <psk-code>
+            <psk-code language="markup">
                 <!-- 
                     Here we have a grid with a 6-columns layout.
                     The property layout will contain rules to set up the content by using these 6 columns. 
@@ -61,7 +61,7 @@
             </psk-grid>
         </psk-chapter>
         <psk-chapter title="Four-Column Source code">
-            <psk-code>
+            <psk-code language="markup">
                 <psk-grid columns="4" layout="xs=[12,12,12,12] s=[12,12,12,12] m=[6,6,6,6] l=[3,3,3,3] xl=[3,3,3,3]">
                     <p>4 columns grid</p>
                     <p>4 columns grid</p>
@@ -95,7 +95,7 @@
             </psk-grid>
         </psk-chapter>
         <psk-chapter title="Three-Column Source code">
-            <psk-code>
+            <psk-code language="markup">
                 <psk-grid columns="3" layout="xs=[12,12,12,12] s=[12,12,12,12] m=[6,6,6,6] l=[3,3,3,3] xl=[3,3,3,3]">
                     <p>3 columns grid</p>
                     <p>3 columns grid</p>
@@ -129,7 +129,7 @@
             </psk-grid>
         </psk-chapter>
         <psk-chapter title="Three-Columns - Wrong layout Example Source code">
-            <psk-code>
+            <psk-code language="markup">
                 <!--  As we see, for "s" and "m" breakpoints, the values are not according to the "layout".
             The rules for "s", -1, wrong and random are not from the allowed set of rules.
             For the "m" breakpoint, the value 13 is not a valid one.
