--- a/pages/web-components/icon.html
+++ b/pages/web-components/icon.html
@@ -19,27 +19,27 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-icon icon="user" disable-color="true" color="rgb(208, 31, 208)">
             </psk-icon>
         </psk-code>
         <psk-icon icon="user" disable-color="true" color="rgb(208, 31, 208)">
         </psk-icon>
 
-        <psk-code>
+        <psk-code language="markup">
             <psk-icon icon="at" color="rgb(235, 192, 52)">
             </psk-icon>
         </psk-code>
         <psk-icon icon="at" color="rgb(235, 192, 52)">
         </psk-icon>
-        <psk-code>
+        <psk-code language="markup">
             <psk-icon icon="apple" color="rgb(128, 235, 52)">
             </psk-icon>
         </psk-code>
         <psk-icon icon="apple" color="rgb(128, 235, 52)">
         </psk-icon>
 
-        <psk-code>
+        <psk-code language="markup">
             <psk-icon icon="amazon" disable-color="true" color="rgb(52, 147, 235)">
             </psk-icon>
         </psk-code>
