--- a/pages/web-components/page-not-found.html
+++ b/pages/web-components/page-not-found.html
@@ -29,16 +29,16 @@
     </psk-chapter>
 
     <psk-chapter title="Code Examples">
-        <psk-code>
+        <psk-code language="markup">
             <psk-page-not-found base-path="/"></psk-page-not-found>
         </psk-code>
-        <psk-code>
+        <psk-code language="markup">
             <psk-page-not-found url-destination="/path/to/destination"></psk-page-not-found>
         </psk-code>
-        <psk-code>
+        <psk-code language="markup">
             <psk-page-not-found page-renderer="my-custom-page-renderer"></psk-page-not-found>
         </psk-code>
-        <psk-code>
+        <psk-code language="markup">
             <psk-page-not-found></psk-page-not-found>
         </psk-code>
     </psk-chapter>
