--- a/pages/web-components/pin-popup.html
+++ b/pages/web-components/pin-popup.html
@@ -28,7 +28,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Examples">
-        <psk-code>
+        <psk-code language="markup">
             <psk-pin-popup opened="true"></psk-pin-popup>
         </psk-code>
     </psk-chapter>
