--- a/pages/web-components/slideshow.html
+++ b/pages/web-components/slideshow.html
@@ -28,7 +28,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Examples">
-        <psk-code>
+        <psk-code language="markup">
             <psk-slideshow images="/assets/slideshow/1.jpg , /assets/slideshow/2.jpg" title="Psk slideshow example"
                 caption="Just one simple example">
             </psk-slideshow>
