--- a/pages/web-components/toolbar.html
+++ b/pages/web-components/toolbar.html
@@ -25,7 +25,7 @@
     </psk-chapter>
 
     <psk-chapter title="Icon Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-toolbar slot="toolbar" actions="active, inactive">
                 <psk-icon slot="active" icon="check-circle" title="Active Tender"></psk-icon>
                 <!-- This psk-icon creates an span with the icon attribute and the disable-color attribute as classes if the slot exists in the actions -->
@@ -44,7 +44,7 @@
     </psk-chapter>
 
     <psk-chapter title="Button Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-toolbar slot="toolbar" actions="click,no-click">
                 <!-- This psk-button creates a button with the btn and btn-primary classes if the slot exists in the actions-->
                 <psk-button slot="click" title="Active Button">Click Action
