--- a/pages/web-components/ui-loader.html
+++ b/pages/web-components/ui-loader.html
@@ -21,7 +21,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-ui-loader shouldBeRendered="true">
             </psk-ui-loader>
         </psk-code>
