--- a/pages/web-components/user-profile.html
+++ b/pages/web-components/user-profile.html
@@ -23,7 +23,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-user-profile
                 userInfo="{{username: 'Aramis', email:'aramis@threemusketeers.net, avatar: 'https://www.dingogames.com/three-musketeers-game/instructions/graphics/aramis.jpg'}}">
             </psk-user-profile>
