--- a/pages/web-components/wizard.html
+++ b/pages/web-components/wizard.html
@@ -27,7 +27,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-wizard>
             </psk-wizard>
         </psk-code>
