--- a/pages/Cardinal/controllers.html
+++ b/pages/Cardinal/controllers.html
@@ -28,7 +28,7 @@
             <p>After the creation of this class, you have two possible choises, to extend or not the base controller named <code>Controller</code>.</p>
             <p>The base controller has already some functionalities provided, like triggering and listening to events, and maybe in the future we will bring other features.</p>
             <p>If you choose to extend the base controller, then the starting point of your class should look like the below one (assuming you are creating the class in the base path of controllers - <code>/src/scripts/controllers</code>):</p>
-<psk-code language="js">
+<psk-code language="Javascript">
     import Controller from "./Controller.js";
 
     export default class MySuperAwesomeController extends Controller {
@@ -36,12 +36,13 @@
             super(element);
         }
     }
+
 </psk-code>
         </psk-chapter>
         <psk-chapter title="Create a controller by writting javascript source code">
             <p>Let's assume that you want to have displayed a list of sale products on a page, but for some of them you want a specific behavior, like triggering an event when a special product has been clicked. In order to do this, you can write some javascript logic only for that product.</p>
             <p>The source code for that product will look something like the following one:</p>
-<psk-code>
+<psk-code language="markup">
     <!-- The controller name is not mandatory, an instance of the default controller is being attached to the container in case no controller is provided. -->
     <psk-container controller="YourControllerName">
         <psk-controller>
@@ -58,6 +59,7 @@
 
         <!-- YOUR WEB COMPONENTS HERE -->
     </psk-container>
+
 </psk-code>
         </psk-chapter>
     </psk-chapter>
@@ -71,11 +73,12 @@
             </psk-list>
             <psk-chapter title="Loading a controller by default">
                 <p>This type of controller is the easiest to be instantiated. You just need to load the <psk-link page="web-components/container">psk-container</psk-link> component, and inside it you only need to write down the web components you desire for the layout. The source code should look like the following: </p>
-<psk-code>
+<psk-code language="markup">
     <!-- In this way, the default controller named "Controller" is loaded inside the container -->
     <psk-container>
         <!-- YOUR WEB COMPONENTS HERE -->
     </psk-container>
+
 </psk-code>
             </psk-chapter>
             <psk-chapter title="Loading a controller by name">
@@ -83,7 +86,7 @@
                 <p>The registration of a controller is made in a Javascript file name <code>app.js</code>, on the following location: <code>/src/scripts/app.js</code></p>
                 <p>In this file, you should register all the controllers you want to use in the application.</p>
                 <p>Source code example of the registered controllers: </p>
-<psk-code language="js">
+<psk-code language="Javascript">
     import MySuperAwesomeController from "./controllers/MySuperAwesomeController.js";
     import Controller from "./controllers/Controller.js";
     
@@ -93,13 +96,15 @@
         ControllerFactory.registerController("Controller", Controller);
         ControllerFactory.registerController("MySuperAwesomeController", DefaultController);
     });
+
 </psk-code>
                 <p>After the registration of the controller, your source code should look like:</p>
-<psk-code>
+<psk-code language="markup">
     <!-- In this way, your controller is instantiated on this container -->
     <psk-container controller-name="MySuperAwesomeController">
         <!-- YOUR WEB COMPONENTS HERE -->
     </psk-container>
+    
 </psk-code>
             </psk-chapter>
             <psk-chapter title="Loading a controller by defining Javascript source code">
