--- a/pages/psk-wiki/psk-card.html
+++ b/pages/psk-wiki/psk-card.html
@@ -25,7 +25,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-card title="PSK-card title" id="321021">
                 <p>JavaScript was created by Brendan Eich in 1995 during his time at Netscape Communications. It was
                     inspired by Java, Scheme and Self.</p>
