--- a/pages/psk-wiki/psk-copy-clipboard.html
+++ b/pages/psk-wiki/psk-copy-clipboard.html
@@ -27,7 +27,7 @@
     </psk-chapter>
 
     <psk-chapter title="Code Example">
-        <psk-code>
+        <psk-code language="markup">
             <psk-copy-clipboard>
             </psk-copy-clipboard>
         </psk-code>
