--- a/pages/web-components/app-menu.html
+++ b/pages/web-components/app-menu.html
@@ -25,7 +25,7 @@
   </psk-chapter>
 
   <psk-chapter title="Code Example">
-    <psk-code>
+    <psk-code language="markup">
       <psk-container>
         <script>
             let menuItems = [{
